--- a/package.json
+++ b/package.json
@@ -5,19 +5,31 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "seed": "ts-node --project prisma/tsconfig.json prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@types/react-router-dom": "^5.3.3",
+    "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.548.0",
+    "next": "15.5.5",
+    "next-auth": "^4.24.13",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.5"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@prisma/client": "^6.19.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "prisma": "^6.19.0",
+    "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
