--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@supabase/supabase-js": "^2.81.1",
     "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.548.0",
